@@ -3,7 +3,6 @@ package edu.dwes.PI_Raul_Lara_Back.service;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -19,9 +18,7 @@ import edu.dwes.PI_Raul_Lara_Back.model.entities.Vehiculo;
 import edu.dwes.PI_Raul_Lara_Back.model.entities.Usuario;
 import edu.dwes.PI_Raul_Lara_Back.model.entities.Imagen;
 import edu.dwes.PI_Raul_Lara_Back.model.entities.Mensaje;
-import edu.dwes.PI_Raul_Lara_Back.model.entities.Rol;
 import edu.dwes.PI_Raul_Lara_Back.model.entities.Transaccion;
-import edu.dwes.PI_Raul_Lara_Back.model.entities.TransaccionId;
 
 @Component
 public class DTOConverter {
@@ -44,39 +41,94 @@ public class DTOConverter {
                 v.getMarca(),
                 v.getModelo(),
                 fecha,
+                v.getMatricula(),
                 v.getTipo(),
                 v.getPrecioEstimado());
+    }
+
+    public Vehiculo toEntity(VehiculoDTO dto) {
+        if (dto == null)
+            return null;
+
+        Vehiculo v = new Vehiculo();
+
+        v.setMarca(dto.getMarca());
+        v.setModelo(dto.getModelo());
+        v.setMatricula(dto.getMatricula());
+        v.setTipo(dto.getTipo());
+        v.setPrecioEstimado(dto.getPrecioEstimado());
+
+        if (dto.getFechaFabricacion() != null) {
+            v.setFecha_fabricacion(
+                    LocalDate.parse(dto.getFechaFabricacion(), DATE_FMT));
+        }
+
+        return v;
     }
 
     // ---------------------------------------------------------
     // ANUNCIO
     // ---------------------------------------------------------
     public AnuncioDTO toDTO(Anuncio a) {
-        if (a == null)
+
+        if (a == null) {
             return null;
+        }
 
         AnuncioDTO dto = new AnuncioDTO();
-        dto.setId(a.getId());
-        dto.setFechaPublicacion(a.getFechaPublicacion() != null
-                ? a.getFechaPublicacion().format(DATE_FMT)
-                : null);
-        dto.setEstado(a.getEstado());
 
+        dto.setId(a.getId());
+        dto.setFechaPublicacion(
+                a.getFechaPublicacion() != null ? a.getFechaPublicacion().toString() : null);
+        dto.setEstado(a.getEstado());
+        dto.setDescripcion(a.getDescripcion());
+
+        // VENDEDOR
+        if (a.getVendedor() != null) {
+            dto.setVendedorId(a.getVendedor().getId());
+        }
+
+        // VEHÍCULO
         if (a.getVehiculo() != null) {
             dto.setVehiculoId(a.getVehiculo().getId());
             dto.setMarca(a.getVehiculo().getMarca());
             dto.setModelo(a.getVehiculo().getModelo());
             dto.setCombustible(a.getVehiculo().getCombustible());
+            dto.setPrecio(a.getVehiculo().getPrecioEstimado());
+            dto.setKilometros(a.getVehiculo().getKilometraje());
         }
 
+        // IMÁGENES
         if (a.getImagenes() != null) {
             dto.setImagenes(
-                    a.getImagenes().stream()
+                    a.getImagenes()
+                            .stream()
                             .map(Imagen::getUrl)
-                            .collect(Collectors.toList()));
+                            .toList());
         }
 
         return dto;
+    }
+
+    public Anuncio toEntity(AnuncioDTO dto, Vehiculo vehiculo, Usuario vendedor) {
+
+        if (dto == null) {
+            return null;
+        }
+        Anuncio a = new Anuncio();
+
+        a.setId(dto.getId()); // normalmente null al crear
+        a.setVehiculo(vehiculo);
+        a.setVendedor(vendedor);
+
+        if (dto.getFechaPublicacion() != null) {
+            a.setFechaPublicacion(LocalDate.parse(dto.getFechaPublicacion()));
+        }
+
+        a.setEstado(dto.getEstado());
+        a.setDescripcion(null); // si no viene en el DTO, lo ponemos manual o se añade después
+
+        return a;
     }
 
     // ---------------------------------------------------------
@@ -97,8 +149,7 @@ public class DTOConverter {
                 u.getEmail(),
                 u.getTelefono(),
                 fecha,
-                u.getRol() != null ? u.getRol().getNombre() : null,
-                u.getPassword());
+                u.getRol() != null ? u.getRol().getNombre() : null);
     }
 
     // ---------------------------------------------------------
@@ -131,6 +182,7 @@ public class DTOConverter {
         dto.setReceptorId(m.getReceptor().getId());
         dto.setReceptorEmail(m.getReceptor().getEmail());
         dto.setReceptorNombre(m.getReceptor().getNombre());
+        dto.setLeido(m.getLeido());
 
         return dto;
     }
@@ -142,6 +194,7 @@ public class DTOConverter {
         Mensaje m = new Mensaje();
         m.setId(dto.getId());
         m.setContenido(dto.getContenido());
+        m.setLeido(dto.isLeido());
 
         if (dto.getFechaEnvio() != null) {
             m.setFechaEnvio(LocalDateTime.parse(dto.getFechaEnvio(), DATE_TIME_FMT));
@@ -153,17 +206,21 @@ public class DTOConverter {
     // TRANSACCION
     // ---------------------------------------------------------
     public TransaccionDTO toDTO(Transaccion t) {
-        if (t == null) {
+        if (t == null)
             return null;
-        }
 
         TransaccionDTO dto = new TransaccionDTO();
 
+        dto.setId(t.getId());
         dto.setAnuncioId(t.getAnuncio().getId());
-        dto.setUsuarioId(t.getVendedor().getId());
-        dto.setTipo(t.getTipoTransaccion());
-        dto.setFechaMovimiento(
-                t.getFechaMovimiento() != null ? t.getFechaMovimiento().toString() : null);
+        dto.setVendedorId(t.getVendedor().getId());
+        dto.setCompradorId(t.getComprador().getId());
+        dto.setTipo(t.getTipo());
+
+        if (t.getFechaMovimiento() != null)
+            dto.setFechaMovimiento(t.getFechaMovimiento().toString());
+
+        dto.setPrecio(t.getPrecio());
 
         return dto;
     }
@@ -173,16 +230,11 @@ public class DTOConverter {
             return null;
 
         Transaccion t = new Transaccion();
-        LocalDate fecha = dto.getFechaMovimiento() != null
-                ? LocalDate.parse(dto.getFechaMovimiento())
-                : null;
-
-        if (dto.getAnuncioId() != null && dto.getUsuarioId() != null && fecha != null) {
-            t.setId(new TransaccionId(dto.getUsuarioId(), dto.getAnuncioId(), fecha));
-        }
-
-        t.setTipoTransaccion(dto.getTipo());
-        t.setFechaMovimiento(fecha);
+        t.setId(dto.getId());
+        if (dto.getFechaMovimiento() != null)
+            t.setFechaMovimiento(LocalDate.parse(dto.getFechaMovimiento()));
+        t.setTipo(dto.getTipo());
+        t.setPrecio(dto.getPrecio());
 
         return t;
     }
